url 등록 및 plant Item 이미지 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Eleven</string>
 
     <string name="complete">완료</string>
-    <string name="exDate">YYYY/MM/DD</string>
+    <string name="exDate">YYYY-MM-DD</string>
     <!-- register_Plant -->
     <string name="registry_image_description">식물 사진 표시자</string>
     <string name="calendar">달력</string>
